fixed the alignment of h4 to h3 on pdf.css as well

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -85,7 +85,8 @@ body.pdf {
     }
 
     h4 {
-        margin: 1.4em 0 0 21%;
+        margin: 0em 0em 0em 21%;
+        padding: 0.5em 0 0 0;
     }
 
     h4+ul {
